<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.seunghyun.linememo.ui.edit.EditViewModel" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_photo_library_black_24dp"
            android:drawablePadding="8dp"
            android:onClick="@{() -> vm.onAlbumButtonClick()}"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/album"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_camera_alt_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:onClick="@{() -> vm.onCameraButtonClick()}"
            android:padding="8dp"
            android:text="@string/camera"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_link_black_24dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:onClick="@{() -> vm.onLinkButtonClick()}"
            android:padding="8dp"
            android:text="@string/link"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>
</layout>
